--- a/src/presentation/templates/MainTemplate/MainTemplate.module.scss
+++ b/src/presentation/templates/MainTemplate/MainTemplate.module.scss
@@ -1,6 +1,10 @@
+@import '../../../styles/_variables';
+
+$header-padding-top: $height-header + 5px;
+
 #root {
-  background-color: #e0e1e0;
+  background-color: $bg-color;
   .container {
-    padding: 70px 5px 5px;
+    padding: $header-padding-top 5px 5px;
   }
 }
