ADD: sample card

--- a/src/presentation/pages/SamplePage/SamplePage.module.scss
+++ b/src/presentation/pages/SamplePage/SamplePage.module.scss
@@ -1,4 +1,11 @@
-// @types
-#root {
+#container {
   font-size: 10px;
+  width: 100%;
+  padding: 10px;
+  .contents {
+    margin-top: 10px;
+    .divider {
+      margin: 15px 0 10px 0;
+    }
+  }
 }
